add /user/block/{id} DELETE method for unblocking users
