# internal/handlers/unblock.go
@@ -8,37 +8,37 @@ import (
 	"strconv"
 )
 
-// Unfollow godoc
-// @Summary Unfollow user
+// Unblock godoc
+// @Summary Unblock user
 // @Tags relationship
 // @Accept  json
 // @Produce application/json
-// @Param	id	path	int	true	"Followed User ID"
+// @Param	id	path	int	true	"Unblocked User ID"
 // @Security BearerAuth
 // @Success 200 {object} Response{data=models.User}
 // @Failure 400 {object} Response
 // @Failure 401 {object} Response
 // @Failure 404 {object} Response
 // @Failure 500 {object} Response
-// @Router /v1/user/follow/{id} [delete]
-func (h *BaseHandler) Unfollow(c echo.Context) error {
+// @Router /v1/user/block/{id} [delete]
+func (h *BaseHandler) Unblock(c echo.Context) error {
 	user := c.Get("user").(*models.User)
 	rawData := c.Param("id")
-	followedUserID, err := strconv.Atoi(rawData)
+	blockedUserID, err := strconv.Atoi(rawData)
 	if err != nil {
 		return ErrorResponse(c, http.StatusBadRequest, "invalid unfollowed userId", err)
 	}
 
-	for i, item := range user.FollowedUsers {
-		if item.ID == followedUserID {
-			followedUsers := append(user.FollowedUsers[:i], user.FollowedUsers[i+1:]...)
-			h.userRepo.ReplaceFollowedUsers(user, followedUsers)
+	for i, item := range user.BlockedUsers {
+		if item.ID == blockedUserID {
+			followedUsers := append(user.BlockedUsers[:i], user.BlockedUsers[i+1:]...)
+			h.userRepo.ReplaceBlockedUsers(user, followedUsers)
 
 			updatedUser, _ := h.userRepo.FindByID(user.ID)
 			updatedUser.ModifyImage()
-			return SuccessResponse(c, http.StatusOK, "successfully unfollowed user", updatedUser)
+			return SuccessResponse(c, http.StatusOK, "successfully unblocked user", updatedUser)
 		}
 	}
-	err = fmt.Errorf("user with id %d is not followed", followedUserID)
-	return ErrorResponse(c, http.StatusNotFound, "user is not followed", err)
+	err = fmt.Errorf("user with id %d is not blocked", blockedUserID)
+	return ErrorResponse(c, http.StatusNotFound, "user is not blocked", err)
 }
